tests/ui/resolve/conflicts.stderr
error: identifier `Er1` already declared
  --> ROOT/tests/ui/resolve/conflicts.sol:LL:CC
   |
LL | error Er1(uint);
   |       --- previous declaration declared here
LL | error Er1(int);
   |       ^^^

error: identifier `C` already declared
  --> ROOT/tests/ui/resolve/conflicts.sol:LL:CC
   |
LL | contract C {
   |          - previous declaration declared here
...
LL | contract C {}
   |          ^

error: identifier `m` already declared
  --> ROOT/tests/ui/resolve/conflicts.sol:LL:CC
   |
LL |     modifier m(uint) { _; }
   |              - previous declaration declared here
LL |     modifier m(int) { _; }
   |              ^

error: identifier `Er2` already declared
  --> ROOT/tests/ui/resolve/conflicts.sol:LL:CC
   |
LL |     error Er2(uint);
   |           --- previous declaration declared here
LL |     error Er2(int);
   |           ^^^

error: aborting due to 4 previous errors

